--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Liu Shun"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Shanxi Normal College"
-  location         : "Guangding, China"
+  location         : "Guangdong, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
